Filter out unsupported JVM arguments from Gradle build environment
When a project's gradle.properties includes org.gradle.jvmargs with
options removed in later Java versions (e.g. -XX:MaxPermSize,
-XX:+UseConcMarkSweepGC), the Gradle daemon fails with
"Unrecognized VM option". Detect the target JDK version from its
release file and filter out arguments that are no longer supported.

Fixes: https://github.com/project-ncl/gradle-manipulator/issues/571

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>